--- a/doc_info.html
+++ b/doc_info.html
@@ -4,20 +4,20 @@
     after each comment section. -->
 
 <!-- 1. This tag will inform the web browser that the page is written in HTML5.  -->
-
+<p>!doctype</p>
 <html>
 <!-- 2. This tag provides general information (metadata) about the document, 
     including its title and links to its scripts and style sheets.  -->
-
+<p>head</p>
 <meta charset="utf-8">
 <!-- 3. This meta tag  let the search engines know what the site is all about. -->
-
+<meta name="description" content </p>
 <meta name="keywords" content="HTML,CSS,JavaScript">
 <!-- 4. This meta tag let the search engines know about the name of the site author. -->
-
+<p>viewport</p>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- 5. This tag contains the title/name of the webpage.. -->
-
+<p>title</p>
 <link href="/css/style.css" rel="stylesheet">
 <script type="text/javascript">
   var dummy = 0;
@@ -26,7 +26,7 @@
 <body>
   <!-- 6. An HTML element usually consists of a start tag and end tag, with the content 
   inserted in between. Some web content  might not appear if not properly opened or closed. -->
-
+<p>body</p>
   <h1>This is the first test.</h1>
 
 </html>
